--- a/main.css
+++ b/main.css
@@ -1,18 +1,37 @@
 * {
     color:burlywood; 
-    background-color: aqua
+   /* background-image: url("giphy.gif")*/
+
 }
 h1{
     color:blueviolet;
     font-size:35px;
+    text-align: center;
 }
 h2,h3{
     color:blueviolet;
     font-size:25px;
+    text-align: center;
 }
 p {
     text-align: center;
 }
-img {
-    text-align: center
+
+.center {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+}
+html{
+    background: url(giphy.gif) no-repeat center fixed;
+    background-size: cover;
+}
+.row {
+    display: flex;
+}
+.column {
+    flex: 33.33%;
+    padding: 5px;
 }
