--- a/main.css
+++ b/main.css
@@ -45,10 +45,10 @@ html{
     overflow: hidden;
 }
 .topnav{
-    float: left;
+    float: center;
     color: yellow;
-    text-align: left;
-    padding: 20px 610px;
+    text-align: center;
+    padding: 20px 70px;
     text-decoration: black;
     font-size: 17px
 }
@@ -79,4 +79,25 @@ html{
 }
 .show {
     display: block;
+}*/
+.arabnav{
+    background-color: black;
+    overflow: hidden;
+    float: center;
+    color: yellow;
+    text-align: center;
+    padding: 20px 70px;
+    text-decoration: black;
+    font-size: 17px
 }
+.pernav{
+    background-color: black;
+    overflow: hidden;
+    float: center;
+    color: yellow;
+    text-align: center;
+    padding: 20px 70px;
+    text-decoration: black;
+    font-size: 17px
+}
+
