--- a/main.css
+++ b/main.css
@@ -16,6 +16,12 @@ h2,h3{
 p {
     text-align: center;
 }
+.me{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto; 
+}
 
 .center {
     /*text-align: center;*/
