--- a/main.css
+++ b/main.css
@@ -7,14 +7,20 @@ h1{
     color: blueviolet;
     font-size:35px;
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
 }
 h2,h3{
     color:blueviolet;
     font-size:25px;
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
 }
 p {
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic
 }
 .me{
     display: block;
@@ -35,11 +41,11 @@ html{
     background: url(giphy.gif) no-repeat center fixed;
     background-size: cover;
 }
-.tex{
+/*.tex{
     background-color: rgba(0,0,0,0.7 alpha);
     color:black;
     padding: 20px;
-    margin: 50px;
+    margin: 50px;*/
 }
 .row {
     display: flex;
