--- a/main.css
+++ b/main.css
@@ -1,17 +1,15 @@
 * {
-    color:burlywood; 
+    color:; 
    /* background-image: url("giphy.gif")*/
 
 }
 h1{
-    color: blueviolet;
+    color:skyblue;
     font-size:35px;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-style: italic;
 }
 h2,h3{
-    color:blueviolet;
+    color:skyblue;
     font-size:25px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -19,8 +17,10 @@ h2,h3{
 }
 p {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
+    font-size: 20px;
+    color: lightcyan
 }
 .me{
     display: block;
@@ -41,12 +41,6 @@ html{
     background: url(giphy.gif) no-repeat center fixed;
     background-size: cover;
 }
-/*.tex{
-    background-color: rgba(0,0,0,0.7 alpha);
-    color:black;
-    padding: 20px;
-    margin: 50px;*/
-}
 .row {
     display: flex;
 }
@@ -57,14 +51,15 @@ html{
 .gdpr {
     text-align: center;
     list-style-position: inside;
+    color: lightcyan;
 }
 .topnav {
     background-color: black;
     overflow: hidden;
 }
-.topnav{
+.topnav  {
     float: center;
-    color: greenyellow;
+    color: coral;
     text-align: center;
     padding: 20px 70px;
     text-decoration: black;
@@ -72,6 +67,9 @@ html{
 }
 .img{
     mix-blend-mode: difference;
+}
+.active{
+    color: coral;
 }
 /*.dropbtn {
     background-color: #3498DB;
@@ -102,7 +100,7 @@ html{
     background-color: black;
     overflow: hidden;
     float: center;
-    color: yellow;
+    color: coral;
     text-align: center;
     padding: 20px 70px;
     text-decoration: black;
@@ -112,10 +110,19 @@ html{
     background-color: black;
     overflow: hidden;
     float: center;
-    color: yellow;
+    color: coral;
     text-align: center;
     padding: 20px 70px;
     text-decoration: black;
     font-size: 17px
+}
+.tp a {
+    color: coral;
+}
+.a :active{
+    color: coral;
+}
+.quote{
+    color: crimson;
 }
 
